--- a/index.html
+++ b/index.html
@@ -1,19 +1,252 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Power BI Embed Test</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Transdev Transport Analytics — Power BI</title>
+  <meta name="description" content="Transdev transport data exercise — embedded Power BI report." />
+
+  <style>
+    :root{
+      --bg: #0f1222;
+      --panel: rgba(255,255,255,0.06);
+      --text: #e8e8ee;
+      --muted:#aeb1c3;
+      --accent:#6ee7ff;
+      --accent-2:#9b8cff;
+      --ring:#ffffff22;
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+      --radius: 18px;
+    }
+    [data-theme="light"]{
+      --bg:#f6f7fb;
+      --panel:#ffffffcc;
+      --text:#1b1e2a;
+      --muted:#4b5063;
+      --accent:#0ea5e9;
+      --accent-2:#7c3aed;
+      --ring:#00000014;
+      --shadow: 0 10px 30px rgba(0,0,0,.12);
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at -10% -10%, #0ea5e955 0%, transparent 60%),
+        radial-gradient(1000px 500px at 110% -10%, #7c3aed33 0%, transparent 60%),
+        radial-gradient(1200px 600px at 50% 120%, #22d3ee22 0%, transparent 60%),
+        var(--bg);
+      transition: background .3s ease, color .3s ease;
+    }
+
+    .wrap{
+      max-width:1200px;
+      padding:24px;
+      margin:0 auto;
+    }
+
+    header{
+      display:flex;
+      align-items:center;
+      gap:16px;
+      justify-content:space-between;
+      margin-bottom:18px;
+    }
+
+    .brand{
+      display:flex; align-items:center; gap:12px;
+    }
+    .dot{
+      width:14px; height:14px; border-radius:50%;
+      background: conic-gradient(from 0deg, var(--accent), var(--accent-2));
+      box-shadow: 0 0 20px var(--accent-2);
+    }
+    .title{
+      margin:0; font-weight:650; letter-spacing:.2px;
+    }
+    .subtitle{
+      margin:2px 0 0; font-size:13px; color:var(--muted)
+    }
+
+    .toolbar{
+      display:flex; gap:10px; flex-wrap:wrap;
+    }
+    .btn{
+      border:1px solid var(--ring);
+      background:linear-gradient(180deg, var(--panel), transparent);
+      color:var(--text);
+      padding:10px 14px;
+      border-radius:12px;
+      cursor:pointer;
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+      box-shadow: var(--shadow);
+      transition: transform .08s ease, border-color .2s ease, background .2s ease;
+      font-weight:600;
+      font-size:14px;
+    }
+    .btn:hover{ transform: translateY(-1px); border-color: #ffffff44; }
+    .btn:active{ transform: translateY(0); }
+    .btn.primary{ border-color:#ffffff55 }
+    .btn.ghost{ background:transparent; box-shadow:none }
+
+    .card{
+      position:relative;
+      background:linear-gradient(180deg, var(--panel), transparent);
+      border:1px solid var(--ring);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow:hidden;
+    }
+
+    .frame-wrap{
+      position:relative;
+      width:100%;
+      aspect-ratio: 16 / 9;
+      min-height: 420px;
+      background: #0b0d1a;
+    }
+    iframe{
+      position:absolute; inset:0; width:100%; height:100%; border:0;
+    }
+
+    .loader{
+      position:absolute; inset:0;
+      display:grid; place-items:center;
+      background: linear-gradient(180deg, transparent, rgba(0,0,0,.15));
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      transition: opacity .25s ease;
+    }
+    .spinner{
+      width:56px; height:56px; border-radius:50%;
+      border:4px solid #ffffff22;
+      border-top-color:var(--accent);
+      animation:spin .9s linear infinite;
+    }
+    @keyframes spin{to{transform:rotate(360deg)}}
+
+    .info{
+      display:flex; align-items:center; gap:8px;
+      padding:14px 16px; color:var(--muted); font-size:13px;
+      border-top:1px dashed var(--ring);
+    }
+
+    footer{
+      opacity:.9; font-size:12px; color:var(--muted);
+      text-align:center; padding:20px 0 40px;
+    }
+
+    @media (max-width:640px){
+      .subtitle{display:none}
+      .toolbar{width:100%}
+      .btn{flex:1}
+      .wrap{padding:16px}
+    }
+  </style>
 </head>
-<body>
-    <h2>Embedded Power BI Report</h2>
-    <iframe 
-        title="Transport Exercise" 
-        width="1140" 
-        height="541.25" 
-        src="https://app.powerbi.com/reportEmbed?reportId=c9b310a9-6829-4575-ac45-ef2526738780&autoAuth=true&ctid=61cd91bb-06ad-4e1b-8834-89f4d8bed847" 
-        frameborder="0" 
-        allowFullScreen="true">
-    </iframe>
+
+<body data-theme="dark">
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="dot" aria-hidden="true"></div>
+        <div>
+          <h1 class="title">Transdev Transport Analytics</h1>
+          <p class="subtitle">Power BI — Transport Exercise (demo embed)</p>
+        </div>
+      </div>
+      <div class="toolbar">
+        <button class="btn primary" id="btn-fullscreen" title="Fullscreen">Fullscreen</button>
+        <button class="btn" id="btn-reload" title="Reload report">Reload</button>
+        <button class="btn" id="btn-open" title="Open report in new tab">Open</button>
+        <button class="btn ghost" id="btn-theme" title="Toggle light/dark">Theme</button>
+      </div>
+    </header>
+
+    <section class="card">
+      <div class="frame-wrap" id="frameWrap" aria-label="Power BI report container">
+        <div class="loader" id="loader" aria-live="polite">
+          <div class="spinner" role="status" aria-label="Loading"></div>
+        </div>
+
+        <iframe
+          id="pbiFrame"
+          title="Transport Exercise"
+          src="https://app.powerbi.com/reportEmbed?reportId=c9b310a9-6829-4575-ac45-ef2526738780&autoAuth=true&ctid=61cd91bb-06ad-4e1b-8834-89f4d8bed847"
+          allowfullscreen="true"
+          loading="eager"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+
+      <div class="info">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M12 8v5m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <span>
+          If the report asks you to sign in, it’s private to your tenant. For public viewing you’d need “Publish to web” (not recommended for sensitive data).
+        </span>
+      </div>
+    </section>
+
+    <footer>
+      © <span id="year"></span> Kshitij Wagle · Demo for Transdev Transport Data Exercise
+    </footer>
+  </div>
+
+  <script>
+    const frame = document.getElementById('pbiFrame');
+    const loader = document.getElementById('loader');
+    const frameWrap = document.getElementById('frameWrap');
+
+    const btnReload = document.getElementById('btn-reload');
+    const btnOpen = document.getElementById('btn-open');
+    const btnTheme = document.getElementById('btn-theme');
+    const btnFull = document.getElementById('btn-fullscreen');
+
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const hideLoader = () => { loader.style.opacity = '0'; setTimeout(()=> loader.style.display='none', 250); };
+    let loadFallback = setTimeout(hideLoader, 2500);
+    frame.addEventListener('load', () => { clearTimeout(loadFallback); hideLoader(); }, { once:true });
+
+    btnReload.addEventListener('click', () => {
+      loader.style.display = 'grid'; loader.style.opacity = '1';
+      const url = new URL(frame.src);
+      url.searchParams.set('_ts', Date.now().toString());
+      frame.src = url.toString();
+    });
+
+    btnOpen.addEventListener('click', () => window.open(frame.src, '_blank', 'noopener,noreferrer'));
+
+    btnTheme.addEventListener('click', () => {
+      const root = document.body;
+      const next = root.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+      root.setAttribute('data-theme', next);
+    });
+
+    function requestFs(el){
+      if (el.requestFullscreen) return el.requestFullscreen();
+      if (el.webkitRequestFullscreen) return el.webkitRequestFullscreen();
+      if (el.msRequestFullscreen) return el.msRequestFullscreen();
+    }
+    btnFull.addEventListener('click', () => requestFs(frameWrap));
+
+    (function swapSrcFromQuery(){
+      try{
+        const qs = new URLSearchParams(location.search);
+        const src = qs.get('src');
+        if(src && /^https:\/\/app\.powerbi\.com\/reportEmbed/i.test(src)){
+          frame.src = src;
+        }
+      }catch(e){}
+    })();
+  </script>
 </body>
 </html>
